--- a/app/src/main/res/layout/task_listing_long_click_menu_layout.xml
+++ b/app/src/main/res/layout/task_listing_long_click_menu_layout.xml
@@ -51,4 +51,19 @@
         android:visibility="gone"
         android:drawableStart="@drawable/ic_delete_forever_black_24dp"/>
 
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Clock in"
+        android:id="@+id/clock_in"
+        android:gravity="center_vertical"
+        android:drawablePadding="10dp"
+        android:layout_gravity="center_horizontal"
+        android:textSize="14sp"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:drawableStart="@drawable/ic_clockin_black_24dp"/>
+
 </LinearLayout>
