--- a/app/src/main/res/layout/activity_assign_task.xml
+++ b/app/src/main/res/layout/activity_assign_task.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="workertrackerloginmodule.titomi.example.com.fieldmonitor.activities.ActivityAssignTask">
+    tools:context="com.example.titomi.workertrackerloginmodule.supervisor.activities.ActivityAssignTask">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -131,7 +131,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
+                android:inputType=""
+                android:enabled="false"
+                android:editable="false"
+
                 android:singleLine="true" />
 
             <TextView
