--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -12,7 +12,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,116 +35,26 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
-                android:text="Damola Davies"
+
                 android:textColor="#fff"
                 android:textSize="21sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:id="@+id/userFullname"/>
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="370dp"
-            android:layout_height="120dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="200dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Items Distributed"
-                        android:textAlignment="center"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/count_items"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="0"
-                        android:textColor="@color/startblue"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tasks Completed"
-                        android:textAlignment="center"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/count_task_comp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="0"
-                        android:textColor="@color/startblue"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Pending Tasks"
-                        android:textAlignment="center"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/count_pending"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="0"
-                        android:textColor="@color/startblue"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
 
     </RelativeLayout>
 
     <ScrollView
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
+
             android:orientation="vertical">
 
             <LinearLayout
@@ -157,7 +67,7 @@
                 <ImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_email_black_24dp" />
+                    app:srcCompat="@drawable/ic_email_black_24dp" />
 
                 <TextView
                     android:id="@+id/profile_email"
@@ -166,7 +76,7 @@
                     android:layout_gravity="center_vertical"
                     android:paddingEnd="10dp"
                     android:paddingStart="20dp"
-                    android:text="damoladavies@aol.com"
+
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -181,7 +91,7 @@
                 <ImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_contact_phone_black_24dp" />
+                    app:srcCompat="@drawable/ic_contact_phone_black_24dp" />
 
                 <TextView
                     android:id="@+id/profile_contact"
@@ -190,7 +100,7 @@
                     android:layout_gravity="center_vertical"
                     android:paddingEnd="20dp"
                     android:paddingStart="20dp"
-                    android:text="08181142213"
+
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -205,7 +115,7 @@
                 <ImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_home_black_24dp" />
+                    app:srcCompat="@drawable/ic_home_black_24dp" />
 
                 <TextView
                     android:id="@+id/profile_address"
@@ -214,9 +124,24 @@
                     android:layout_gravity="center_vertical"
                     android:paddingEnd="10dp"
                     android:paddingStart="20dp"
-                    android:text="Yaba, Lagos"
+
                     android:textStyle="bold" />
+
+
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/role"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical"
+                android:paddingEnd="10dp"
+                android:paddingStart="30dp"
+
+                android:gravity="center_vertical"
+                android:textStyle="bold"
+                android:drawableStart="@drawable/ic_label_green_24dp"
+                android:drawablePadding="28dp"/>
 
             <Button
                 android:id="@+id/editProfile"
@@ -226,7 +151,8 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/buttonstyle"
                 android:text="Edit Profile"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:visibility="gone"/>
         </LinearLayout>
     </ScrollView>
 
