--- a/app/src/main/res/layout/activity_leave_application.xml
+++ b/app/src/main/res/layout/activity_leave_application.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="workertrackerloginmodule.titomi.example.com.fieldmonitor.activities.ActivityLeaveApplication">
+    tools:context="com.example.titomi.workertrackerloginmodule.supervisor.activities.ActivityLeaveApplication">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
