--- a/app/src/main/res/layout/activity_alert_main.xml
+++ b/app/src/main/res/layout/activity_alert_main.xml
@@ -30,6 +30,7 @@
                 android:layout_marginStart="10dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="gone"
                 android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
@@ -64,6 +65,7 @@
                 android:layout_marginStart="3dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="gone"
                 android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
@@ -108,6 +110,7 @@
                 android:layout_marginStart="10dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="gone"
                 android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
@@ -141,6 +144,7 @@
                 android:layout_marginStart="3dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="gone"
                 android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
