--- a/app/src/main/res/layout/activity_attendance_main.xml
+++ b/app/src/main/res/layout/activity_attendance_main.xml
@@ -30,6 +30,7 @@
                 android:layout_marginStart="10dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="gone"
                 android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
@@ -63,6 +64,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="5dp"
                 android:clickable="true"
+                android:visibility="gone"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground">
 
