--- a/app/src/main/res/layout/activity_supervisor_main.xml
+++ b/app/src/main/res/layout/activity_supervisor_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,6 +25,7 @@
             android:layout_marginStart="10dp"
             android:clickable="true"
             android:focusable="true"
+            android:visibility="gone"
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
@@ -37,7 +39,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackground"
                     android:padding="10dp"
-                    android:src="@drawable/supervisor_feedback" />
+                    app:srcCompat="@drawable/supervisor_feedback" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -72,7 +74,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackground"
                     android:padding="10dp"
-                    android:src="@drawable/ic_note_add" />
+                    app:srcCompat="@drawable/ic_note_add" />
 
                 <TextView
                     android:layout_width="wrap_content"
