--- a/app/src/main/res/layout/leave_single_item_layout.xml
+++ b/app/src/main/res/layout/leave_single_item_layout.xml
@@ -82,21 +82,20 @@
                 android:padding="2dp"
                 android:paddingEnd="2dp"
                 android:paddingStart="5dp"
-                android:text="Supervisor"
+                android:text="Approved By"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
 
             <TextView
-                android:id="@+id/supervisorText"
+                android:id="@+id/approvedByText"
                 android:layout_width="match_parent"
-
                 android:layout_height="wrap_content"
                 android:background="@drawable/line"
                 android:paddingEnd="2dp"
                 android:paddingStart="5dp"
-                android:text="Chyjane"
+                android:text="Yet to be approved"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 android:textStyle="normal" />
@@ -122,7 +121,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/numDaysText"
+                    android:id="@+id/numDaysText1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -153,7 +152,7 @@
                 android:paddingEnd="2dp"
                 android:paddingStart="5dp"
                 android:paddingTop="1dp"
-                android:text="I need them quickly"
+                android:text="No Comments From Supervisor"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 android:textStyle="normal" />
@@ -218,43 +217,6 @@
                     android:textColor="@color/black"
                     android:textSize="12sp"
                     android:textStyle="normal" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:id="@+id/messagesLinearLayout1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:paddingEnd="2dp"
-                    android:paddingStart="5dp"
-                    android:paddingTop="5dp"
-                    android:text="Message"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-
-                    />
-
-                <TextView
-                    android:id="@+id/messageText1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/line"
-                    android:paddingEnd="2dp"
-                    android:paddingStart="5dp"
-                    android:paddingTop="1dp"
-                    android:text="I need them quickly"
-                    android:textColor="@color/black"
-                    android:textSize="12sp"
-                    android:textStyle="normal" />
-
             </LinearLayout>
 
             <TextView
