--- a/app/src/main/res/layout/activity_users_login_trival.xml
+++ b/app/src/main/res/layout/activity_users_login_trival.xml
@@ -20,7 +20,7 @@
         android:layout_below="@id/app_logo"
         android:layout_centerHorizontal="true"
         android:id="@+id/progressBar"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
     <EditText
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
