--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -34,6 +34,7 @@
                     android:layout_marginStart="10dp"
                     android:clickable="true"
                     android:focusable="true"
+                    android:visibility="gone"
                     android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
@@ -65,6 +66,7 @@
                     android:layout_height="190dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginStart="3dp"
+                    android:visibility="gone"
                     android:clickable="true"
                     android:focusable="true"
                     android:foreground="?android:attr/selectableItemBackground">
