--- a/app/src/main/res/layout/activity_absent.xml
+++ b/app/src/main/res/layout/activity_absent.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.titomi.workertrackerloginmodule.AlertManager.alert_sub_menu.AbsentActivity">
+    tools:context="com.example.titomi.workertrackerloginmodule.alert_manager.alert_sub_menu.AbsentActivity">
 
 </android.support.constraint.ConstraintLayout>
