--- a/app/src/main/res/layout/activity_alert_main.xml
+++ b/app/src/main/res/layout/activity_alert_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.example.titomi.workertrackerloginmodule.AlertManager.AlertMainActivity">
+    tools:context="com.example.titomi.workertrackerloginmodule.alert_manager.AlertMainActivity">
 
     <include layout="@layout/main_toolbar" />
 
