--- a/app/src/main/res/layout/activity_inventory_report.xml
+++ b/app/src/main/res/layout/activity_inventory_report.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.titomi.workertrackerloginmodule.inventory_module.InventorySubMenu.InventoryReportActivity">
+    tools:context="com.example.titomi.workertrackerloginmodule.inventory_module.inventory_sub_menu.InventoryReportActivity">
 
 </android.support.constraint.ConstraintLayout>
