--- a/app/src/main/res/layout/activity_product_request.xml
+++ b/app/src/main/res/layout/activity_product_request.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.titomi.workertrackerloginmodule.inventory_module.InventorySubMenu.ProductRequestActivity">
+    tools:context="com.example.titomi.workertrackerloginmodule.inventory_module.inventory_sub_menu.ProductRequestActivity">
 
     <Button
         android:id="@+id/button"
