--- a/app/src/main/res/layout/attendance_fragment.xml
+++ b/app/src/main/res/layout/attendance_fragment.xml
@@ -17,8 +17,8 @@
             android:layout_centerHorizontal="true"
             android:visibility="gone" />
 
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/barChart"
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChartAttend"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_below="@id/small_task_table"
