--- a/app/src/main/res/layout/activity_add_remit.xml
+++ b/app/src/main/res/layout/activity_add_remit.xml
@@ -24,7 +24,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Enter Remittance Record"
+                android:text="@string/enter_remittance_record"
+                android:textAllCaps="true"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="16sp"
