--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -132,7 +132,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Enter Remittance Record"
+                            android:text="Remittance Record"
                             android:textAlignment="center"
                             android:textSize="15sp"
                             android:textStyle="bold" />
